<resources>
    <string name="app_name">Examen1eval</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="jabon_de_manos_x1">Jabon de manos x1</string>
    <string name="_2">$2</string>
    <string name="shampoo_monster_x1">Shampoo Monster x1</string>
    <string name="_10">$10</string>
    <string name="pastas_duria_x2">Pastas Duria x2</string>
    <string name="_18">$18</string>
    <string name="detergente_limpiadin_x1">Detergente Limpiadin x1</string>
    <string name="_13_4">$13,4</string>
    <string name="_43_4">$43,4</string>
    <string name="coste_envio">Coste envio</string>
    <string name="cup_n">Cupón</string>
    <string name="_5">$-5</string>
    <string name="total">Total</string>
    <string name="_48_4">48,4</string>
</resources>